added delete endpoint
