# api.yml
@@ -9,18 +9,6 @@ produces:
   - application/json
 basePath: "/api"
 paths:
-#  /test1/{test1_id}:
-#    get:
-#      tags: [ Test1 ]
-#      operationId: app.get_test1
-#      summary: Testing endpoint
-#      parameters:
-#        - $ref: '#/parameters/test1_id'
-#      responses:
-#        200:
-#          description: Return test1
-#        404:
-#          description: Does not exist
   /invoice/create:
     post:
       tags: [ Invoices ]
@@ -67,41 +55,29 @@ paths:
           description: return all Invoices
         404:
           description: Invoices not found
-#  /person/:
-#    post:
-#      tags: [ Person ]
-#      operationId: app.person_add
-#      parameters:
-#        - $ref: '#/parameters/person_body'
-#      responses:
-#        200:
-#          description: Return status
-#        409:
-#          description: Already exists
-#  /person/{person_name}:
-#    get:
-#      tags: [ Person ]
-#      operationId: app.person_find
-#      parameters:
-#        - $ref: '#/parameters/person_name'
-#      responses:
-#        200:
-#          description: Return person object
-#        404:
-#          description: Person not found
-
+  /invoice/delete/{id}:
+    delete:
+      tags: [ Invoices ]
+      operationId: app.delete_invoice
+      summary: Delete invoice by id
+      parameters:
+        - $ref: '#/parameters/id'
+      responses:
+        204:
+          description: Invoice successfully deleted
+        404:
+          description: Invoice not found
 parameters:
-#  test1_id:
-#    name: test1_id
-#    description: Test1 unique id
-#    in: path
-#    type: string
-#    required: true
-#    pattern: "^[a-zA-Z0-9-]+$"
-
   user_id:
     name: user_id
     description: The ID of the User
+    in: path
+    type: string
+    required: true
+
+  id:
+    name: id
+    description: The ID of the Invoice
     in: path
     type: string
     required: true
@@ -129,23 +105,3 @@ parameters:
           type: integer
         item_list:
           type: array
-
-#  person_body:
-#    name: person_body
-#    description: Test1 unique id
-#    in: body
-#    schema:
-#      required:
-#        - name
-#      properties:
-#        name:
-#          type: string
-#        surname:
-#          type: string
-#
-#  person_name:
-#    name: person_name
-#    description: The name of the person we're looking for
-#    in: path
-#    required: true
-#    type: string
